tests/dex-auth/keycloak-gatekeeper/base/test_data/expected/apps_v1_deployment_keycloak-gatekeeper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-gatekeeper
  namespace: auth
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: keycloak-gatekeeper
  template:
    metadata:
      annotations:
        checksum/config: 485074e1c0607eca69f97a813313e55bce27515a65f57b11036c8dd074ea3a30
      labels:
        app: keycloak-gatekeeper
    spec:
      containers:
      - args:
        - --listen=:3000
        - --client-id=ldapdexapp
        - --client-secret=pUBnBOY80SnXgjibTYM9ZWNzY2xreNGQok
        - --secure-cookie=false
        - --discovery-url=http://dex.example.com:31200
        - --upstream-url=http://kubeflow.centraldashboard.com:31380
        - --redirection-url=http://keycloak-gatekeeper.example.com:31204
        - --scopes=groups
        - --sign-in-page=/opt/templates/sign_in.html.tmpl
        - --forbidden-page=/opt/templates/forbidden.html.tmpl
        - --enable-refresh-tokens=true
        - --http-only-cookie=true
        - --preserve-host=true
        - --enable-encrypted-token=true
        - --encryption-key=nm6xjpPXPJFInLYo
        - --enable-authorization-header
        - --resources=uri=/*
        image: keycloak/keycloak-gatekeeper:5.0.0
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /opt/templates/forbidden.html.tmpl
          name: page-templates
          subPath: forbidden-page
        - mountPath: /opt/templates/sign_in.html.tmpl
          name: page-templates
          subPath: login-page
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
      - configMap:
          name: keycloak-gatekeeper-page-templates
        name: page-templates
