tests/dex-auth/keycloak-gatekeeper/base/test_data/expected/networking.istio.io_v1alpha3_virtualservice_keycloak-gatekeeper.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-gatekeeper
  namespace: auth
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - port: 5554
      uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: keycloak-gatekeeper.auth.svc.cluster.local
        port:
          number: 5554
