tests/dex-auth/keycloak-gatekeeper/base/test_data/expected/~g_v1_configmap_keycloak-gatekeeper-parameters.yaml
apiVersion: v1
data:
  client_id: ldapdexapp
  client_secret: pUBnBOY80SnXgjibTYM9ZWNzY2xreNGQok
  discovery_url: http://dex.example.com:31200
  encryption_key: nm6xjpPXPJFInLYo
  redirection_url: http://keycloak-gatekeeper.example.com:31204
  secure_cookie: "false"
  upstream_url: http://kubeflow.centraldashboard.com:31380
kind: ConfigMap
metadata:
  name: keycloak-gatekeeper-parameters
  namespace: auth
