tests/dex-auth/keycloak-gatekeeper/base/test_data/expected/~g_v1_service_keycloak-gatekeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-gatekeeper
  namespace: auth
spec:
  ports:
  - name: http
    nodePort: 32004
    port: 5554
    protocol: TCP
    targetPort: http
  selector:
    app: keycloak-gatekeeper
  type: NodePort
